# CreatorForge

./: .gitignore  CreatorForge_Hackathon_Blueprint.docx
hackathons-main/: .gitignore
hackathons-main/agents/creatorforge-agent/: .env.example  README.md  pyproject.toml
hackathons-main/agents/creatorforge-agent/src/: __init__.py  config.py
hackathons-main/agents/creatorforge-agent/src/agents/: ad_revenue_agent.py  brand_strategist.py  copywriter.py  designer.py  market_scout.py  quality_auditor.py  tooling.py
hackathons-main/agents/creatorforge-agent/src/api/: app.py  models.py  routes_approvals.py  routes_procurement.py  routes_seller.py
hackathons-main/agents/creatorforge-agent/src/integrations/: nevermined_client.py  openai_clients.py  zeroclick_client.py
hackathons-main/agents/creatorforge-agent/src/orchestration/: ceo_orchestrator.py  creative_director.py  mindra_client.py  procurement_director.py
hackathons-main/agents/creatorforge-agent/src/payments/: a2a_server.py  http_x402.py
hackathons-main/agents/creatorforge-agent/src/pricing/: policy.py
hackathons-main/agents/creatorforge-agent/src/procurement/: budget_engine.py  roi_engine.py  vendor_selector.py
hackathons-main/agents/creatorforge-agent/src/storage/: db.py  repository.py
hackathons-main/agents/creatorforge-agent/src/telemetry/: audit_log.py
hackathons-main/agents/creatorforge-agent/tests/: test_budget_and_caps.py  test_mindra_client.py  test_pricing_policy.py  test_procurement_flows_live.py  test_repository_idempotency.py  test_roi_switching.py  test_seller_endpoints.py
(+78 files in other folders)
