[tool.poetry]
name = "creatorforge-agent"
version = "0.1.0"
description = "CreatorForge autonomous creative asset economy agent"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
strands-agents = {version = ">=1.0.0", extras = ["openai", "a2a"]}
fastapi = "^0.120.0"
uvicorn = ">=0.34.2,<1.0.0"
httpx = "^0.28.0"
python-dotenv = "^1.0.0"
pydantic = "^2.9.0"
openai = "^1.40.0"
payments-py = {version = ">=1.3.3", extras = ["a2a", "langchain", "strands"]}
langchain-openai = ">=0.3.0"
langgraph = ">=0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[tool.poetry.scripts]
creatorforge-api = "src.api.app:main"
creatorforge-a2a-card = "src.payments.a2a_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
